--- a/src/components/Input/style.less
+++ b/src/components/Input/style.less
@@ -61,7 +61,7 @@
 }
 
 .Input-counter {
-  // absolute 在iOS下有坑，在消息列表里的输入框，输入文字后，页面卡片下移
+  // absolute 在iOS下有坑，在message list里的输入框，输入文字后，页面卡片下移
   position: relative;
   z-index: 1;
   float: right;
