feat: fix send button

--- a/demo/src/index.less
+++ b/demo/src/index.less
@@ -6,6 +6,9 @@ body {
   margin: 0;
 }
 
+.Btn.Btn--primary.Composer-sendBtn {
+  background: linear-gradient(90deg,#292f33,#5d5adc);
+}
 
 .widget-btn {
   color: white;
