--- a/demo/src/index.less
+++ b/demo/src/index.less
@@ -40,6 +40,7 @@ body {
 
   border: 2px solid #1f1f28;
   border-radius: 12px;
+  box-shadow: 3px 11px 14px -6px rgb(0 0 0 / 49%);
 }
 
 .demo-index {
