feat: make responsive

--- a/demo/src/index.less
+++ b/demo/src/index.less
@@ -41,6 +41,16 @@ body {
   border: 2px solid #1f1f28;
   border-radius: 12px;
   box-shadow: 3px 11px 14px -6px rgb(0 0 0 / 49%);
+
+
+}
+
+@media only screen and (max-width: 600px) {
+  .widget-container {
+    max-width: calc(100% - 40px);
+    bottom: 20px;
+    right: 20px;
+  }
 }
 
 .demo-index {
